--- a/main.css
+++ b/main.css
@@ -219,3 +219,12 @@ svg line{
     margin-bottom: 10vh;
 }
 
+
+/*Quellen Bereich*/
+
+.FLEXparent{
+    display: flex;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+}
